--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
     <h1>A barbearia</h1>
 
     <p>Localizada no centro de Irati já esta no mercado a anos
-   sempre inovando.</p>
-   
+   sempre inovando.</p
   <p>Com clientes de anos. E clientes novos todos os dias,sempre 
    inovando em equipamentos.</p>
    
