--- a/index.html
+++ b/index.html
@@ -12,13 +12,15 @@
 </head>
 <body>
     <h1>A barbearia</h1>
+    <img src="CAPA.jpg"
+
 
     <p>Localizada no centro de Irati já esta no mercado a anos
    sempre inovando.</p
   <p>Com clientes de anos. E clientes novos todos os dias,sempre 
    inovando em equipamentos.</p>
    
-   <p>Com ótimos funcionários,deixando assim todos os clientes 
-   confortáveis.</p>
+   <p>Com ótimos funcionários,<i>deixando assim todos os clientes 
+   confortáveis</i>.</p>
 </body>
 </html>
