--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
     <img src="CAPA.jpg"
 
 
-    <p>Localizada no centro de Irati já esta no mercado a anos
-   sempre inovando.</p
+   <p> <i>Localizada no centro de Irati já esta no mercado a anos
+   sempre inovando.</i>></p>
+
   <p>Com clientes de anos. E clientes novos todos os dias,sempre 
    inovando em equipamentos.</p>
    
